<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.karibe.BLEToolBox.MainActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp"
    android:weightSum="2">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">
    </android.support.v7.widget.Toolbar>
    <ListView
        android:id="@+id/orodha"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible">
    </ListView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBattery"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/heat_rate_txt" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/emptyBloodPressure"
            android:textAlignment="textEnd" />
    </LinearLayout>
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBattery"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:gravity="center_vertical|start"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/battery_level"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/battery_level"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/empty"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
