<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.karibe.BLEToolBox.MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"
        android:layout_alignParentTop="true"
        >
    </android.support.v7.widget.Toolbar>
    <ListView
        android:id="@+id/orodha"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_below="@id/toolbar"
        android:visibility="invisible">
    </ListView>
    <LinearLayout
        android:background="@color/colorBattery"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/orodha"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBattery"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/thumb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/thumb"/>
            <TextView
                android:id="@+id/thumb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/empty"
                android:textAlignment="textEnd" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@color/colorBattery"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/index" />
            <TextView
                android:id="@+id/index2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/empty"
                android:textAlignment="textEnd" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@color/colorBattery"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/middle" />

            <TextView
                android:id="@+id/middle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/empty"
                android:textAlignment="textEnd" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@color/colorBattery"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/ring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/ring" />

            <TextView
                android:id="@+id/ring2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/empty"
                android:textAlignment="textEnd" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@color/colorBattery"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/small" />

            <TextView
                android:id="@+id/small2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/empty"
                android:textAlignment="textEnd" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBattery"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/battery_level1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/battery_level"/>

        <TextView
            android:id="@+id/battery_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/empty"
            android:textAlignment="textEnd"/>
    </LinearLayout>
</RelativeLayout>